-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 10
-
Component/s: hotspot
-
b21
-
Verified
Test:
compiler/c1/Test6855215.java
compiler/c1/Test6579789.java
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (c:/jprt/T/P1/172511.gctriant/s/hotspot/src/cpu/x86/vm/assembler_x86.cpp:2826), pid=43440, tid=56440
# Error: assert(VM_Version::supports_sse()) failed
#
# JRE version: (10.0) (fastdebug build )
# Java VM: Java HotSpot(TM) Server VM (fastdebug 10-internal+0-2017-06-12-172511.gctriant.jdk10-hs, compiled mode, tiered, g1 gc, windows-x86)
--------------- T H R E A D ---------------
Current thread (0x00e8b000): JavaThread "Unknown thread" [_thread_in_vm, id=56440, stack(0x02750000,0x027a0000)]
Stack: [0x02750000,0x027a0000], sp=0x0279f4dc, free space=317k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [jvm.dll+0x8f934b] VMError::report_and_die+0x47b;; ?report_and_die@VMError@@SAXHPBD0PADPAVThread@@PAEPAX40HI@Z+0x47b
V [jvm.dll+0x8f9847] VMError::report_and_die+0x27;; ?report_and_die@VMError@@SAXPAVThread@@PBDH11PAD@Z+0x27
V [jvm.dll+0x3dda58] report_vm_error+0x48;; ?report_vm_error@@YAXPBDH00ZZ+0x48
V [jvm.dll+0x1f90c3] Assembler::movss+0x43;; ?movss@Assembler@@IAEXPAVXMMRegisterImpl@@VAddress@@@Z+0x43
V [jvm.dll+0x8a18e3] TemplateInterpreterGenerator::generate_math_entry+0x1b3;; ?generate_math_entry@TemplateInterpreterGenerator@@IAEPAEW4MethodKind@AbstractInterpreter@@@Z+0x1b3
V [jvm.dll+0x89ada7] TemplateInterpreterGenerator::generate_all+0xae7;; ?generate_all@TemplateInterpreterGenerator@@IAEXXZ+0xae7
V [jvm.dll+0x89a2b9] TemplateInterpreterGenerator::TemplateInterpreterGenerator+0x29;; ??0TemplateInterpreterGenerator@@QAE@PAVStubQueue@@@Z+0x29
V [jvm.dll+0x899ed9] TemplateInterpreter::initialize+0x99;; ?initialize@TemplateInterpreter@@SAXXZ+0x99
V [jvm.dll+0x5406d5] interpreter_init+0x5;; ?interpreter_init@@YAXXZ+0x5
V [jvm.dll+0x8b5ec2] Threads::create_vm+0x212;; ?create_vm@Threads@@SAHPAUJavaVMInitArgs@@PA_N@Z+0x212
V [jvm.dll+0x5bf955] JNI_CreateJavaVM_inner+0x85;; ?JNI_CreateJavaVM_inner@@YAHPAPAUJavaVM_@@PAPAXPAX@Z+0x85
V [jvm.dll+0x5c18bf] JNI_CreateJavaVM+0x4f;; _JNI_CreateJavaVM@12+0x4f
C [java.exe+0x2a45]
C [java.exe+0x3006]
compiler/c1/Test6855215.java
compiler/c1/Test6579789.java
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (c:/jprt/T/P1/172511.gctriant/s/hotspot/src/cpu/x86/vm/assembler_x86.cpp:2826), pid=43440, tid=56440
# Error: assert(VM_Version::supports_sse()) failed
#
# JRE version: (10.0) (fastdebug build )
# Java VM: Java HotSpot(TM) Server VM (fastdebug 10-internal+0-2017-06-12-172511.gctriant.jdk10-hs, compiled mode, tiered, g1 gc, windows-x86)
--------------- T H R E A D ---------------
Current thread (0x00e8b000): JavaThread "Unknown thread" [_thread_in_vm, id=56440, stack(0x02750000,0x027a0000)]
Stack: [0x02750000,0x027a0000], sp=0x0279f4dc, free space=317k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [jvm.dll+0x8f934b] VMError::report_and_die+0x47b;; ?report_and_die@VMError@@SAXHPBD0PADPAVThread@@PAEPAX40HI@Z+0x47b
V [jvm.dll+0x8f9847] VMError::report_and_die+0x27;; ?report_and_die@VMError@@SAXPAVThread@@PBDH11PAD@Z+0x27
V [jvm.dll+0x3dda58] report_vm_error+0x48;; ?report_vm_error@@YAXPBDH00ZZ+0x48
V [jvm.dll+0x1f90c3] Assembler::movss+0x43;; ?movss@Assembler@@IAEXPAVXMMRegisterImpl@@VAddress@@@Z+0x43
V [jvm.dll+0x8a18e3] TemplateInterpreterGenerator::generate_math_entry+0x1b3;; ?generate_math_entry@TemplateInterpreterGenerator@@IAEPAEW4MethodKind@AbstractInterpreter@@@Z+0x1b3
V [jvm.dll+0x89ada7] TemplateInterpreterGenerator::generate_all+0xae7;; ?generate_all@TemplateInterpreterGenerator@@IAEXXZ+0xae7
V [jvm.dll+0x89a2b9] TemplateInterpreterGenerator::TemplateInterpreterGenerator+0x29;; ??0TemplateInterpreterGenerator@@QAE@PAVStubQueue@@@Z+0x29
V [jvm.dll+0x899ed9] TemplateInterpreter::initialize+0x99;; ?initialize@TemplateInterpreter@@SAXXZ+0x99
V [jvm.dll+0x5406d5] interpreter_init+0x5;; ?interpreter_init@@YAXXZ+0x5
V [jvm.dll+0x8b5ec2] Threads::create_vm+0x212;; ?create_vm@Threads@@SAHPAUJavaVMInitArgs@@PA_N@Z+0x212
V [jvm.dll+0x5bf955] JNI_CreateJavaVM_inner+0x85;; ?JNI_CreateJavaVM_inner@@YAHPAPAUJavaVM_@@PAPAXPAX@Z+0x85
V [jvm.dll+0x5c18bf] JNI_CreateJavaVM+0x4f;; _JNI_CreateJavaVM@12+0x4f
C [java.exe+0x2a45]
C [java.exe+0x3006]
- relates to
-
JDK-8181616 FMA Vectorization on x86
-
- Resolved
-