8182114: assert(VM_Version::supports_sse()) failed

Restore UseSSE check for FMA

Reviewed-by: dcubed